crates/oxide-agent-core/tests/snapshots/modular_registry_snapshots__modular_registry_snapshot@profile-embedded-opencode-local.snap
---
source: crates/oxide-agent-core/tests/modular_registry_snapshots.rs
expression: "serde_json::to_string_pretty(&snapshot).expect(\"snapshot should serialize\")"
---
{
  "profile": "profile-embedded-opencode-local",
  "compiled_manifest": {
    "capabilities": [
      {
        "id": "llm-provider/opencode-go",
        "module": "llm-provider/opencode-go"
      },
      {
        "id": "llm-provider/opencode-zen",
        "module": "llm-provider/opencode-zen"
      },
      {
        "id": "sandbox-backend/sandboxd-client",
        "module": "sandbox-backend/sandboxd-client"
      },
      {
        "id": "sandbox-backend/sandboxd-client/diagnostics",
        "module": "sandbox-backend/sandboxd-client"
      },
      {
        "id": "sandbox-backend/sandboxd-client/exec",
        "module": "sandbox-backend/sandboxd-client"
      },
      {
        "id": "sandbox-backend/sandboxd-client/fileops",
        "module": "sandbox-backend/sandboxd-client"
      },
      {
        "id": "sandbox-backend/sandboxd-client/lifecycle",
        "module": "sandbox-backend/sandboxd-client"
      },
      {
        "id": "storage/sqlx",
        "module": "storage/sqlx"
      },
      {
        "id": "tool/agents-md",
        "module": "tool/agents-md"
      },
      {
        "id": "tool/compression",
        "module": "tool/compression"
      },
      {
        "id": "tool/delegation",
        "module": "tool/delegation"
      },
      {
        "id": "tool/file-delivery",
        "module": "tool/file-delivery"
      },
      {
        "id": "tool/media-audio-transcription",
        "module": "tool/media-audio"
      },
      {
        "id": "tool/media-image-description",
        "module": "tool/media-image"
      },
      {
        "id": "tool/media-video-description",
        "module": "tool/media-video"
      },
      {
        "id": "tool/reminder",
        "module": "tool/reminder"
      },
      {
        "id": "tool/sandbox-exec",
        "module": "tool/sandbox-exec"
      },
      {
        "id": "tool/sandbox-fileops",
        "module": "tool/sandbox-fileops"
      },
      {
        "id": "tool/sandbox-list-files",
        "module": "tool/sandbox-fileops"
      },
      {
        "id": "tool/sandbox-recreate",
        "module": "tool/sandbox-recreate"
      },
      {
        "id": "tool/todos",
        "module": "tool/todos"
      },
      {
        "id": "tool/web-crawler",
        "module": "tool/web-crawler"
      },
      {
        "id": "tool/web-search",
        "module": "tool/web-search"
      },
      {
        "id": "tool/webfetch-md",
        "module": "tool/webfetch-md"
      },
      {
        "id": "tool/wiki-memory",
        "module": "tool/wiki-memory"
      },
      {
        "id": "transport/telegram",
        "module": "transport/telegram"
      }
    ],
    "modules": [
      {
        "cargo_feature": "llm-opencode-go",
        "config_properties": [
          {
            "default_value": "https://opencode.ai/zen/go/v1/chat/completions",
            "description": "OpenCode Go Chat Completions endpoint.",
            "env": "OPENCODE_GO_API_BASE",
            "name": "api_base",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": null,
            "description": "OpenCode Go API key. Also accepts OPENCODE_ZEN_API_KEY and legacy OPENCODE_GO_API_KEY.",
            "env": "OPENCODE_API_KEY",
            "name": "api_key",
            "secret": true,
            "value_kind": "string"
          },
          {
            "default_value": "https://opencode.ai/zen/go/v1/messages",
            "description": "OpenCode Go Anthropic Messages endpoint.",
            "env": "OPENCODE_GO_MESSAGES_API_BASE",
            "name": "messages_api_base",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": "1800",
            "description": "OpenCode Go model discovery cache TTL.",
            "env": "OPENCODE_GO_MODEL_CACHE_TTL_SECS",
            "name": "model_cache_ttl_secs",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": "https://opencode.ai/zen/go/v1/models",
            "description": "OpenCode Go model discovery endpoint.",
            "env": "OPENCODE_GO_MODELS_URL",
            "name": "models_url",
            "secret": false,
            "value_kind": "string"
          }
        ],
        "conflicts": [],
        "id": "llm-provider/opencode-go",
        "kind": "llm-provider",
        "provides": [
          "llm-provider/opencode-go"
        ],
        "requires": []
      },
      {
        "cargo_feature": "llm-opencode-go",
        "config_properties": [
          {
            "default_value": "https://opencode.ai/zen/v1/chat/completions",
            "description": "OpenCode Zen Chat Completions endpoint.",
            "env": "OPENCODE_ZEN_API_BASE",
            "name": "api_base",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": null,
            "description": "OpenCode Zen API key. Also accepts OPENCODE_API_KEY and OPENCODE_GO_API_KEY.",
            "env": "OPENCODE_ZEN_API_KEY",
            "name": "api_key",
            "secret": true,
            "value_kind": "string"
          },
          {
            "default_value": "https://opencode.ai/zen/v1/messages",
            "description": "OpenCode Zen Anthropic Messages endpoint.",
            "env": "OPENCODE_ZEN_MESSAGES_API_BASE",
            "name": "messages_api_base",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": "1800",
            "description": "OpenCode Zen model discovery cache TTL.",
            "env": "OPENCODE_ZEN_MODEL_CACHE_TTL_SECS",
            "name": "model_cache_ttl_secs",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": "https://opencode.ai/zen/v1/models",
            "description": "OpenCode Zen free model discovery endpoint.",
            "env": "OPENCODE_ZEN_MODELS_URL",
            "name": "models_url",
            "secret": false,
            "value_kind": "string"
          }
        ],
        "conflicts": [],
        "id": "llm-provider/opencode-zen",
        "kind": "llm-provider",
        "provides": [
          "llm-provider/opencode-zen"
        ],
        "requires": []
      },
      {
        "cargo_feature": "sandbox-backend-sandboxd-client",
        "config_properties": [],
        "conflicts": [],
        "id": "sandbox-backend/sandboxd-client",
        "kind": "sandbox-backend",
        "provides": [
          "sandbox-backend/sandboxd-client",
          "sandbox-backend/sandboxd-client/diagnostics",
          "sandbox-backend/sandboxd-client/exec",
          "sandbox-backend/sandboxd-client/fileops",
          "sandbox-backend/sandboxd-client/lifecycle"
        ],
        "requires": []
      },
      {
        "cargo_feature": "storage-sqlx",
        "config_properties": [
          {
            "default_value": "10",
            "description": "Postgres pool connection/acquire timeout in seconds.",
            "env": "OXIDE_DATABASE_CONNECT_TIMEOUT_SECS",
            "name": "connect_timeout_secs",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": null,
            "description": "Postgres connection URL. Also accepts DATABASE_URL as a runtime fallback.",
            "env": "OXIDE_DATABASE_URL",
            "name": "database_url",
            "secret": true,
            "value_kind": "string"
          },
          {
            "default_value": "5",
            "description": "Maximum Postgres pool connections.",
            "env": "OXIDE_DATABASE_MAX_CONNECTIONS",
            "name": "max_connections",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": "false",
            "description": "Run SQLx migrations during storage startup when set to true.",
            "env": "OXIDE_DATABASE_MIGRATE_ON_STARTUP",
            "name": "migrate_on_startup",
            "secret": false,
            "value_kind": "string"
          },
          {
            "default_value": "migrations",
            "description": "Runtime path to SQLx migration files.",
            "env": "OXIDE_DATABASE_MIGRATIONS_DIR",
            "name": "migrations_dir",
            "secret": false,
            "value_kind": "string"
          }
        ],
        "conflicts": [],
        "id": "storage/sqlx",
        "kind": "storage-backend",
        "provides": [
          "storage/sqlx"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-agents-md",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/agents-md",
        "kind": "tool",
        "provides": [
          "tool/agents-md"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-compression",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/compression",
        "kind": "tool",
        "provides": [
          "tool/compression"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-delegation",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/delegation",
        "kind": "tool",
        "provides": [
          "tool/delegation"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-file-delivery",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/file-delivery",
        "kind": "file-delivery",
        "provides": [
          "tool/file-delivery"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-media-audio",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/media-audio",
        "kind": "media",
        "provides": [
          "tool/media-audio-transcription"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-media-image",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/media-image",
        "kind": "media",
        "provides": [
          "tool/media-image-description"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-media-video",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/media-video",
        "kind": "media",
        "provides": [
          "tool/media-video-description"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-reminder",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/reminder",
        "kind": "reminder",
        "provides": [
          "tool/reminder"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-sandbox-exec",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/sandbox-exec",
        "kind": "sandbox-tool",
        "provides": [
          "tool/sandbox-exec"
        ],
        "requires": [
          {
            "capabilities": [
              "sandbox-backend/sandboxd-client/exec"
            ],
            "kind": "any-of"
          }
        ]
      },
      {
        "cargo_feature": "tool-sandbox-fileops",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/sandbox-fileops",
        "kind": "sandbox-tool",
        "provides": [
          "tool/sandbox-fileops",
          "tool/sandbox-list-files"
        ],
        "requires": [
          {
            "capabilities": [
              "sandbox-backend/sandboxd-client/fileops"
            ],
            "kind": "any-of"
          }
        ]
      },
      {
        "cargo_feature": "tool-sandbox-recreate",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/sandbox-recreate",
        "kind": "sandbox-tool",
        "provides": [
          "tool/sandbox-recreate"
        ],
        "requires": [
          {
            "capabilities": [
              "sandbox-backend/sandboxd-client/lifecycle"
            ],
            "kind": "any-of"
          }
        ]
      },
      {
        "cargo_feature": "tool-todos",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/todos",
        "kind": "tool",
        "provides": [
          "tool/todos"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-webfetch-md",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/web-crawler",
        "kind": "search",
        "provides": [
          "tool/web-crawler"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-web-search",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/web-search",
        "kind": "search",
        "provides": [
          "tool/web-search"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-webfetch-md",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/webfetch-md",
        "kind": "search",
        "provides": [
          "tool/webfetch-md"
        ],
        "requires": []
      },
      {
        "cargo_feature": "tool-wiki-memory",
        "config_properties": [],
        "conflicts": [],
        "id": "tool/wiki-memory",
        "kind": "memory",
        "provides": [
          "tool/wiki-memory"
        ],
        "requires": []
      },
      {
        "cargo_feature": "transport-telegram",
        "config_properties": [],
        "conflicts": [],
        "id": "transport/telegram",
        "kind": "transport",
        "provides": [
          "transport/telegram"
        ],
        "requires": []
      }
    ]
  },
  "enabled_manifest_default_config": {
    "capabilities": [
      "llm-provider/opencode-go",
      "llm-provider/opencode-zen",
      "sandbox-backend/sandboxd-client",
      "sandbox-backend/sandboxd-client/diagnostics",
      "sandbox-backend/sandboxd-client/exec",
      "sandbox-backend/sandboxd-client/fileops",
      "sandbox-backend/sandboxd-client/lifecycle",
      "storage/sqlx",
      "tool/agents-md",
      "tool/compression",
      "tool/delegation",
      "tool/file-delivery",
      "tool/media-audio-transcription",
      "tool/media-image-description",
      "tool/media-video-description",
      "tool/reminder",
      "tool/sandbox-exec",
      "tool/sandbox-fileops",
      "tool/sandbox-list-files",
      "tool/sandbox-recreate",
      "tool/todos",
      "tool/web-crawler",
      "tool/web-search",
      "tool/webfetch-md",
      "tool/wiki-memory",
      "transport/telegram"
    ],
    "modules": [
      "llm-provider/opencode-go",
      "llm-provider/opencode-zen",
      "sandbox-backend/sandboxd-client",
      "storage/sqlx",
      "tool/agents-md",
      "tool/compression",
      "tool/delegation",
      "tool/file-delivery",
      "tool/media-audio",
      "tool/media-image",
      "tool/media-video",
      "tool/reminder",
      "tool/sandbox-exec",
      "tool/sandbox-fileops",
      "tool/sandbox-recreate",
      "tool/todos",
      "tool/web-crawler",
      "tool/web-search",
      "tool/webfetch-md",
      "tool/wiki-memory",
      "transport/telegram"
    ]
  },
  "registered_tool_names_default_config": [
    "apply_file_edit",
    "cancel_sub_agents",
    "compress",
    "describe_image_file",
    "describe_video_file",
    "execute_command",
    "list_files",
    "read_file",
    "recreate_sandbox",
    "send_file_to_user",
    "spawn_sub_agents",
    "transcribe_audio_file",
    "upload_file",
    "wait_sub_agents",
    "web_markdown",
    "write_file",
    "write_todos"
  ],
  "registered_llm_provider_ids_dummy_config": [
    "llm-provider/opencode-go",
    "llm-provider/opencode-zen"
  ],
  "registered_llm_provider_aliases_dummy_config": [
    "opencode-go",
    "opencode-zen",
    "opencode_go",
    "opencode_zen"
  ],
  "storage_backend_module_ids": [
    "storage/sqlx"
  ],
  "sandbox_backend_module_ids": [
    "sandbox-backend/sandboxd-client"
  ],
  "external_service_requirements": [
    {
      "module_id": "llm-provider/opencode-go",
      "kind": "llm-provider",
      "cargo_feature": "llm-opencode-go",
      "config_env": [
        "OPENCODE_GO_API_BASE",
        "OPENCODE_API_KEY",
        "OPENCODE_GO_MESSAGES_API_BASE",
        "OPENCODE_GO_MODEL_CACHE_TTL_SECS",
        "OPENCODE_GO_MODELS_URL"
      ],
      "requires_capabilities": []
    },
    {
      "module_id": "llm-provider/opencode-zen",
      "kind": "llm-provider",
      "cargo_feature": "llm-opencode-go",
      "config_env": [
        "OPENCODE_ZEN_API_BASE",
        "OPENCODE_ZEN_API_KEY",
        "OPENCODE_ZEN_MESSAGES_API_BASE",
        "OPENCODE_ZEN_MODEL_CACHE_TTL_SECS",
        "OPENCODE_ZEN_MODELS_URL"
      ],
      "requires_capabilities": []
    },
    {
      "module_id": "sandbox-backend/sandboxd-client",
      "kind": "sandbox-backend",
      "cargo_feature": "sandbox-backend-sandboxd-client",
      "config_env": [],
      "requires_capabilities": []
    },
    {
      "module_id": "storage/sqlx",
      "kind": "storage-backend",
      "cargo_feature": "storage-sqlx",
      "config_env": [
        "OXIDE_DATABASE_CONNECT_TIMEOUT_SECS",
        "OXIDE_DATABASE_URL",
        "OXIDE_DATABASE_MAX_CONNECTIONS",
        "OXIDE_DATABASE_MIGRATE_ON_STARTUP",
        "OXIDE_DATABASE_MIGRATIONS_DIR"
      ],
      "requires_capabilities": []
    },
    {
      "module_id": "tool/web-crawler",
      "kind": "search",
      "cargo_feature": "tool-webfetch-md",
      "config_env": [],
      "requires_capabilities": []
    },
    {
      "module_id": "tool/web-search",
      "kind": "search",
      "cargo_feature": "tool-web-search",
      "config_env": [],
      "requires_capabilities": []
    },
    {
      "module_id": "tool/webfetch-md",
      "kind": "search",
      "cargo_feature": "tool-webfetch-md",
      "config_env": [],
      "requires_capabilities": []
    }
  ]
}
